Update browserly to fix changes made. Matches plotly v4.3.4
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@197374 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/vignettes/browser_ly_testing.Rmd
+++ b/trunk/vignettes/browser_ly_testing.Rmd
@@ -66,15 +66,15 @@ cvg <- make_coverage_tracks(fi[idx, "File.bw"],
 
 
 ```{r Demo_hm}
-plot_browserly_tracks(view_range, tx_data, cvg)
+plot_single_locus(view_range, tx_data, cvg)
 ```
 
 ```{r Demo_line}
-plot_browserly_tracks(view_range, tx_data, cvg, type = "line")
+plot_single_locus(view_range, tx_data, cvg, type = "scatter")
 ```
 
 ```{r Demo_stacking}
-plot_browserly_tracks(view_range, tx_data, cvg, stacking='squish', type='line')
+plot_single_locus(view_range, tx_data, cvg, stacking='squish', type="scatter")
 ```
 
 # Plotting multiple genes for several conditions
