--- a/trunk/vignettes/browser_ly_testing.Rmd
+++ b/trunk/vignettes/browser_ly_testing.Rmd
@@ -84,15 +84,37 @@ genes <- c('RNF2', 'E2F1', 'GREB1', 'BAP1')
 
 # Select the indices of the chip-seq experiments
 # c_idx stands for conditions index
-c_idx <- c(2, 6, 10, 14, 19)
 
 # Set how far upstream and downstream  you want to view from the TSS
 extension <- 50000
+conditions <- names(idx)
+cvg_files <- fi[idx, "File.bw"]
+
+centered_genes <- lapply(genes, function(gene){
+  gene_data <- get_centered_gene_info(gene = gene,
+                                      extension = extension,
+                                      cvg_files = cvg_files,
+                                      conditions = conditions,
+                                      scaling_factor = sf,
+                                      tx_data = tx_data,
+                                      symbol_table = symbol_table)
+  return(gene_data)
+})
+cvg_list <- GRangesList(lapply(centered_genes, function(x) {x$gene_cvg}))
+names(cvg_list) <- genes
+tx_list <- GRangesList(lapply(centered_genes, function(x) {x$gene_tx}))
+names(tx_list) <- genes
+
+```
+
+```{r}
+plot_multiple_genes(genes = genes,
+                    centered_cvg = cvg_list,
+                    centered_tx = tx_list)
 ```
 
 ```{r Multiple Genes, echo=FALSE}
-lib_size <- get_scaling_factor(fi[c_idx,])[2,]/1000000
-conditions <- fi$Genotype[c_idx]
+
 p_list <- list()
 a_list <- list()
 r_list <- list()
