--- a/trunk/vignettes/browserly_testing.Rmd
+++ b/trunk/vignettes/browserly_testing.Rmd
@@ -18,8 +18,10 @@ library(org.Hs.eg.db)
 library(chipVis)
 ```
 
-
 ```{r Load data, echo=FALSE}
+# This is information specific to the project that has been preprocessed
+
+# fi is the file_info object (a dataframe), that has file locations
 fi <- readRDS("/gne/research/workspace/schepa/Carroll_Data/chip_file_info.Rds")
 
 T47D = list(
@@ -38,29 +40,56 @@ T47D = list(
 )
 ```
 
-# Load the annotation reference data
+# Plot single locus
+## Input Data
+A trackview requires three components to display properly.
+
+1. The view range: a GRanges object describing the region to be displayed
+2. Annotation data: a list containing annotation features that will be rendered
+3. Coverage data: a GRanges object that contains the coverage to be displayed
+
+### View Range
+Browserly needs to know the range to plot. This is used to pull the correct annotation information. The function `get_view_range` makes the appropriate object for use with browserly. If passed an OrganismDbi object, `get_view_range` can also be used to get the range by gene symbol. Here we'll use the region for the gene GREB1, because it is a good responder to ER and PR.
+```{r view_range}
+view_range <- get_view_range(chr = 2, start=11482341, end=11642788)
+view_range
+```
+
+The range can also be extended if desired. This is a particularly useful function when creating uniformly sized views around disparate regions. For example, the TSS of many genes can be made as 1bp GRanges and extended to be of equal length.
+
+The range can be extended symmetrically on both sides
+```{r extend range symmetric}
+extend_grange(view_range, 50000)
+```
+
+or asymmetrically by passing a vector
+```{r extend range asymmetric}
+extend_grange(view_range, c(1000, 5000))
+```
+
+### Annotation data
 We pre-load the annotation information from the TxDB into an easily searched list. This saves time when repeated calls are made to find the genomic ranges and features that are used in plotting coverage information. 
 The variable `tx_data` contains several lists that a indexed by transcript
 feature (e.g. intron, utr5). It also keeps track of the seqlevelstyle used
 in the database.
 
-**Note:** We also use the annotation helper function `match_tx_to_gene` to zip together OrgDB and TxDB objects by entrez id. This allows genes to be searched by gene symbol, which is often more human friendly.
 ```{r Load Annotation reference}
 txdb <- TxDb.Hsapiens.BioMart.igis
 tx_data <- load_tx_data(txdb)
 print(names(tx_data))
+```
 
+**Note:** We also use the annotation helper function `match_tx_to_gene` to zip together OrgDB and TxDB objects by entrez id. This allows genes to be searched by gene symbol, which is often more human friendly.
+``` {r match transcripts to genes}
 symbol_table <- match_tx_to_gene(txdb, 'org.Hs.eg')
 print(head(symbol_table))
 ```
 
-
-# Read coverage information
+### Coverage information.
 Users are expected to provide their own data for plotting. Data should be provided as a GRanges object, where the metadata columns (mcols) contain the coverage values in each range.
-```{r Read Coverage Files, echo=FALSE}
-# This happens to be the gene region of AGGF1 and ZBED3
-view_range <- get_view_range(chr = 5, start=76320000, end=76400000)
 
+The utility function `make_coverage_tracks` is provided
+```{r Read Coverage Files, echo=FALSE}
 # Specify coverage files
 input <- fi[2, 'Sample.Control']
 input_idx <- which(fi$Sample.Name==input)
@@ -79,14 +108,6 @@ cvg <- make_coverage_tracks(fi[idx, "File.bw"],
                             sample_names = shortened_names, 
                             scaling_factors = sf)
 print(head(cvg))
-```
-
-# Plot single locus
-## Input Data
-### View Range
-Browserly needs to know the range to plot. This is used to pull the correct annotation information
-```{r view_range}
-view_range
 ```
 
 
