Add documentation to browserly_utils. Minor refactor. Add browserly_testing.html as reference
git-svn-id: http://resscm.gene.com/bioinfo/projects/Vishva/InternChIP/chipVis@197624 ea8427e4-251f-0410-985a-fb3ea31d2ee2

--- a/trunk/vignettes/browserly_testing.Rmd
+++ b/trunk/vignettes/browserly_testing.Rmd
@@ -1,13 +1,15 @@
 ---
-title: "browser_ly_testing"
+title: "browserly_testing"
 author: "Justin Finkle"
-date: "`r format(Sys.time(), '%d %B, %Y')`"
-output: 
+date: '`r format(Sys.time(), ''%d %B, %Y'')`'
+output:
+  pdf_document:
+    toc: yes
   html_document:
-    toc: true
-    toc_float: 
-      collapsed: false
-      smooth_scroll: false
+    toc: yes
+    toc_float:
+      collapsed: no
+      smooth_scroll: no
 ---
 
 # Intro
@@ -183,7 +185,7 @@ centered_genes <- lapply(genes, function(gene){
   gene_data <- get_centered_gene_info(gene = gene,
                                       extension = extension,
                                       cvg_files = cvg_files,
-                                      conditions = conditions,
+                                      sample_names = conditions,
                                       scaling_factor = sf,
                                       tx_data = tx_data,
                                       symbol_table = symbol_table)
