--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -39,7 +39,8 @@ ctcf.peaks = ctcf.peaks[seqnames(ctcf.peaks) == "chr21"]
 ctcf.peaks = ctcf.peaks[order(-ctcf.peaks$signalValue)]
 ctcf.peaks = resize(ctcf.peaks, width = 1, fix = "center")
 
-ctcf_mats <- make_coverage_matrix(bamfiles, ctcf.peaks, up = 1000, down = 1000, 
+ctcf_mats <- make_coverage_matrix(bamfiles, ctcf.peaks, 
+                                  up = 1000, down = 1000, 
                                   binsize = 25)
 
 coverage_heatmap(ctcf_mats[[1]])
@@ -52,23 +53,80 @@ coverage_heatmap(ctcf_mats)
 
 
 
-# Genomics heatmaps
+# Genomics Heatmaps
+
+## Expression heatmap
+
+```{r}
+data("rpkm_chr21")
+```
+
+```{r}
+iheatmap(assays(rpkm_chr21)[["rpkm"]])
+```
+
+```{r}
+iheatmap(rpkm_chr21,"rpkm")
+```
+
+```{r}
+iheatmap(rpkm_chr21, "rpkm",
+         x = colData(rpkm_chr21)$STD_NAME, y = rowData(rpkm_chr21)$SYMBOL, 
+         col_annotation = colData(rpkm_chr21)[,c("TYPE","SEX")])
+```
+
+There is also an `add_iheatmap` method defined for SummarizedExperiment for adding a heatmap based on a SummarizedExperiment to an existing heatmap.
 
 ## Coverage heatmaps
 
+### The data
+
+```{r}
+genomation_dir <- system.file("extdata", package = "genomationData")
+
+samp.file <- file.path(genomation_dir,'SamplesInfo.txt')
+samp.info <- read.table(samp.file, header=TRUE, sep='\t', 
+                       stringsAsFactors = FALSE)
+samp.info$fileName <- file.path(genomation_dir, samp.info$fileName)
+
+```
+
+```{r}
+ctcf.peaks = genomation::readBroadPeak(system.file("extdata",
+                         "wgEncodeBroadHistoneH1hescCtcfStdPk.broadPeak.gz",
+                         package = "genomationData"))
+ctcf.peaks = ctcf.peaks[seqnames(ctcf.peaks) == "chr21"]
+ctcf.peaks = ctcf.peaks[order(-ctcf.peaks$signalValue)]
+ctcf.peaks = resize(ctcf.peaks, width = 501, fix = "center")
+```
+
+### Making coverage matrices
+
+```{r}
+ctcf_mats <- make_coverage_matrix(bamfiles, 
+                                  ctcf.peaks, 
+                                  up = 1000, down = 1000, 
+                                  binsize = 25)
+
+```
+
+
 ### Single coverage
+
+```{r}
+coverage_heatmap(ctcf_mats[[1]])
+```
+
 
 ### Adding coverage heatmap
 
 ### Multiple coverage
 
+### Add multiple coverage heatmaps
+
 ### Coverage heatmap at TSS
 
-## Expression heatmap
-
-## Correlation heatmap
-
-## Linking several heatmaps
+### Combining expression heatmap with coverage heatmap
 
 # Interactive genome tracks
 
@@ -76,13 +134,9 @@ coverage_heatmap(ctcf_mats)
 
 ## Pre-load annotation data
 
-
-
 ## Single track
 
-
 ## Multiple tracks
-
 
 ## Expression
 
@@ -91,31 +145,12 @@ coverage_heatmap(ctcf_mats)
 
 ## Single locus
 
-## Input Data
-A trackview requires three components to display properly.
-
-1. The view range: a GRanges object describing the region to be displayed
-2. Annotation data: a list containing annotation features that will be rendered
-3. Coverage data: a GRanges object that contains the coverage to be displayed
-
 ### View Range
-Browserly needs to know the range to plot. This is used to pull the correct annotation information. The function `get_view_range` makes the appropriate object for use with browserly. If passed an OrganismDbi object, `get_view_range` can also be used to get the range by gene symbol. 
+
 
 ```{r view_range}
-view_range <- get_view_range(chr = "chr21", start=45050000, end=45068000)
+view_range <- make_view_range(chr = "chr21", start=45050000, end=45068000)
 view_range
-```
-
-The range can also be extended if desired. This is a particularly useful function when creating uniformly sized views around disparate regions. For example, the TSS of many genes can be made as 1bp GRanges and extended to be of equal length.
-
-The range can be extended symmetrically on both sides
-```{r extend range symmetric}
-extend_grange(view_range, 50000)
-```
-
-or asymmetrically by passing a vector
-```{r extend range asymmetric}
-extend_grange(view_range, c(1000, 5000))
 ```
 
 ### Annotation data
@@ -131,38 +166,29 @@ tx_data <- load_tx_data(txdb)
 print(names(tx_data))
 ```
 
-**Note:** We also use the annotation helper function `match_tx_to_gene` to zip together OrgDB and TxDB objects by entrez id. This allows genes to be searched by gene symbol, which is often more human friendly.
-``` {r match transcripts to genes}
-library(org.Hs.eg.db)
-symbol_table <- match_tx_to_gene(txdb, "org.Hs.eg")
-head(symbol_table)
+
+## Track plotter
+
+```{r}
+track_plotter <- make_track_plotter(samp.info$sampleName[1:3], tx_data, 
+                                    track_names = samp.info$sampleName[1:3] , 
+                                    share_y = TRUE)
 ```
 
-### Coverage information.
-Users are expected to provide their own data for plotting. Data should be provided as a GRanges object, where the metadata columns (mcols) contain the coverage values in each range.
-
-The utility function `make_coverage_tracks` is provided for convenience, and has a few helpful features. It takes a list of coverage files (e.g. bigwig, bam) and the `view_range` to be displayed. Optionally, the user can provide corresponding names for the samples (e.g. treatment condition, antibody), and a scaling factor for the coverage data (e.g. library size).
-
-```{r Get coverage}
-sf <- rep(100,6)
-# Get the coverage
-cvg <- make_coverage_tracks(bamfiles[c(1,4,6)], 
-                            target_range = view_range, 
-                            scaling_factors = sf[c(1,4,6)])
-head(cvg)
+```{r}
+track_plotter(ctcf.peaks[1])
 ```
+
+
+
 
 ## Standard plot
-A common representation of coverage is a trackview. Browserly makes it simple to 
-create an interactive trackview that looks similar to other packages, such as Gviz.
+
 ```{r Demo_stacking}
-plot_single_locus(view_range, tx_data, cvg, stacking='squish', type="scatter")
+
 ```
 
 By default, browserly densely stacks all overlapping transcripts to save visual space. Future versions may allow for the display of "canonical" transcripts. All y axes default to being on the same scale, but this can also be disabled.
-```{r Demo_line}
-#plot_single_locus(view_range, tx_data, cvg, type = "scatter", sync_y = FALSE)
-```
 
 ## Heatmap of coverage
 Browserly automatcially determines the type of plot for showing coverage. When many
